--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <title>1.2.9 Exercise</title>
 
   <!-- This critical line points your HTML to the CSS file. Notice the "relative" pathway  -->
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
   <header>
-    <h1>Student Bio</h1>
+    <h1>Yoon Ho Ryoo's Bio</h1>
   </header>
 
   <div class="container">
 
     <section id="main-bio">
 
-      <h2>Your Name</h2>
+      <h2>Yoon Ho Ryoo</h2>
 
       <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
 
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+      <p> Hi my name is Yoon Ho Ryoo and I was born in Seoul, South Korea. <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
     </section>
 
     <section id="contact-info">
